make back-of-envelope-calculation bigger

--- a/TeX/paper/parts/soc_ext_body.tex
+++ b/TeX/paper/parts/soc_ext_body.tex
@@ -21,7 +21,7 @@ There are a couple of theories rationalizing spectator violence. For instance, t
 
 
 % back of envelope calculations
-Back-of-the-envelope calculations based on my estimates indicate that the crime externalities of football games are substantial. For example, football games in the first three leagues of the German Football league system explain 17.7 percent of assault reports and lead to 18,770 additional assaults in the season of 2014/15.\footnote{These calculations are based on an estimated reduction in assaults per million population per day, 335 days of the football season, and a population of 20,93 million in the affected regions. The number of prevented assaults for the season 2014/15 is: $2.677 \times 335 \times \frac{20,930,000}{1,000,000} = 18,770.$} \cite{glaubitz2016kostet} estimate the social cost of an assault at 5,067 euros (in 2020 prices), which implies an annual social cost of 95 million euros.\footnote{The estimated social costs by \cite{glaubitz2016kostet} are conservative compared to other estimates from around the globe. In the United States, the social costs of an assault range from 17,300 to 68,000 euros \citep{miller1996victim,cohen2004willingness}. In New Zealand the social costs are estimated at 6,400 euros \citep{roper2006estimating}, and in Great Britain the estimated costs are 2,300 euros \citep{dubourg2005economic}. All costs are in 2014 prices.}
+Back-of-the-envelope calculations based on my estimates indicate that the crime externalities of football games are substantial. For example, football games in the first three leagues of the German Football league system explain 17.7 percent of assault reports and lead to 18,770 additional assaults in the season of 2014/15. \cite{glaubitz2016kostet} estimate the social cost of an assault at 5,067 euros (in 2020 prices), which implies an annual social cost of 95 million euros.\footnote{The estimated social costs by \cite{glaubitz2016kostet} are conservative compared to other estimates from around the globe. In the United States, the social costs of an assault range from 17,300 to 68,000 euros \citep{miller1996victim,cohen2004willingness}. In New Zealand the social costs are estimated at 6,400 euros \citep{roper2006estimating}, and in Great Britain the estimated costs are 2,300 euros \citep{dubourg2005economic}. All costs are in 2014 prices.}
 
 
 
@@ -320,7 +320,7 @@ Due to the nonlinearity of the model, the coefficient in Table \ref{tab_soc_ext:
 % CONCLUSION
 %-------------------------------------------------------------------
 \bigskip
-\section{Concluding remarks}\label{sec_soc_ext:conclusion}
+\section{Discussion and Conclusion}\label{sec_soc_ext:conclusion}
 
 % summary
 In this paper, I analyze the impact of professional football games on violent behavior. To estimate the causal effects of football games on physical assaults, I use a generalized difference-in-differences approach that exploits the variation in the timing of matches. I compare regional assault levels on days with and without matches conditional on the day of the week, month, and year while additionally accounting for potential confounding variation coming from weather and holidays. I match web-scraped information on 4,461 football matches with data on local assault rates, weather, holidays, and population figures to construct a panel at the municipality-day level over the period 2011-2015. I find that a home game increases the average assault rate by 21.5 percent. The victimization rates of males are driving the results and are particularly high for the age group 18-29 years. Besides, the impact is 
@@ -330,4 +330,4 @@ larger for victims with no prior relationship to the suspect and completed offen
 
 
 % policy perspective
-I find the external effects of football games on violent behavior to be large in magnitude and economically relevant. A back-of-the-envelope calculation estimates the annual social costs of football games in the first three leagues of the German league system at 95 million euros (just for the additional assaults). The \cite{coase1960problem} theorem states that market failures resulting from externalities can be solved without public intervention (here: the taxpayers do not have to pay for police operations), if there are clearly defined property rights, complete information, and low/no transaction costs. The question is whether the negative externalities would be internalized in absence of state action. To this end, the football clubs (i) must have an incentive to prevent violence in the context of the event and (ii) be able to implement the incentive effectively \citep{daumann2012}. Concerning the former, the clubs have a credible interest in maintaining a peaceful atmosphere otherwise fans, sponsors, and media might avoid the matches. Moreover, the clubs can either employ private security agencies or reimburse police operations to effectively prevent violence in and around the stadiums. Therefore, it should be in the club's own interest to take over the funding of the security. Critics would argue that this procedure is incompatible with the constitution as public safety is a sovereign right and obligation. However, from an economic perspective, it helps to make a distinction between the premises of the football matches and the public domain when discussing the reimbursement of costs for police operations \citep{mause2020}. On the premises, a football match can be considered as a private good, for whose security consumers and producers should pay for.\footnote{The attendance of a football match can be regarded as a private good as both conditions of rivalry (every seat can only be sold once) and excludability (the host can deny entry to some individuals) are satisfied.} In contrast, the socialization of police costs is justifiable in the public domain as all members of the society benefit equally. This regulation, the assumption of police costs on the club's premises, is consistent with statutes in France, Switzerland, and Great Britain. From the point of view of welfare economics, you have to consider both positive and negative externalities and analyze whether football matches increases social welfare. Many positive effects generated by football matches are, however, not externalities in the strict sense as they have already been internalized.\footnote{Many economic agents have to pay a fee in order to be included in the value chain of professional football, such as television companies who pay fees to be allowed to broadcast the sporting events.} Therefore, an interesting point of future research is to assess all relevant externalities, positive and negative alike, and evaluate whether there is a positive social net utility coming from professional football games. 
+I find the external effects of football games on violent behavior to be large in magnitude and economically relevant. For instance, professional football games explain 17.7 percent of all assault reports in the regions hosting a professional football club. Back-of-the-envelope calculations indicate that football games in the first three leagues of the German league system precipitate an additional 18,770 assaults in the season of 2014/15,\footnote{These calculations are based on an estimated reduction in assaults per million population per day, 335 days of the football season, and a population of 20,93 million in the affected regions. The number of prevented assaults for the season 2014/15 is: $2.677 \times 335 \times \frac{20,930,000}{1,000,000} = 18,770.$} which imply an annual social cost of 95 million euros.\footnote{To calculate the annual social cost, I use an estimated cost of 5,067 euros (in 2020 prices) for an assault \citep{glaubitz2016kostet}.} The \cite{coase1960problem} theorem states that market failures resulting from externalities can be solved without public intervention (here: the taxpayers do not have to pay for police operations), if there are clearly defined property rights, complete information, and low/no transaction costs. The question is whether the negative externalities would be internalized in absence of state action. To this end, the football clubs (i) must have an incentive to prevent violence in the context of the event and (ii) be able to implement the incentive effectively \citep{daumann2012}. Concerning the former, the clubs have a credible interest in maintaining a peaceful atmosphere otherwise fans, sponsors, and media might avoid the matches. Moreover, the clubs can either employ private security agencies or reimburse police operations to effectively prevent violence in and around the stadiums. Therefore, it should be in the club's own interest to take over the funding of the security. Critics would argue that this procedure is incompatible with the constitution as public safety is a sovereign right and obligation. However, from an economic perspective, it helps to make a distinction between the premises of the football matches and the public domain when discussing the reimbursement of costs for police operations \citep{mause2020}. On the premises, a football match can be considered as a private good, for whose security consumers and producers should pay for.\footnote{The attendance of a football match can be regarded as a private good as both conditions of rivalry (every seat can only be sold once) and excludability (the host can deny entry to some individuals) are satisfied.} In contrast, the socialization of police costs is justifiable in the public domain as all members of the society benefit equally. This regulation, the assumption of police costs on the club's premises, is consistent with statutes in France, Switzerland, and Great Britain. From the point of view of welfare economics, you have to consider both positive and negative externalities and analyze whether football matches increases social welfare. Many positive effects generated by football matches are, however, not externalities in the strict sense as they have already been internalized.\footnote{Many economic agents have to pay a fee in order to be included in the value chain of professional football, such as television companies who pay fees to be allowed to broadcast the sporting events.} Therefore, an interesting point of future research is to assess all relevant externalities, positive and negative alike, and evaluate whether there is a positive social net utility coming from professional football games. 
