--- a/analysis/output/tables/reg_fe/assrate_fixed_effects.tex
+++ b/analysis/output/tables/reg_fe/assrate_fixed_effects.tex
@@ -3,7 +3,7 @@ Game day            &       2.740\sym{***}&       2.766\sym{***}&       2.813\sy
 \midrule Effect size [\%]&       22.00         &       22.21         &       22.59         &       21.50         \\
 Observations        &      88,028         &      88,028         &      88,028         &      88,028         \\
 Region FE           &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
-Date Fe             &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
+Date FE             &         \checkmark         &         \checkmark         &         \checkmark         &         \checkmark         \\
 Weather Controls    &           -         &         \checkmark         &         \checkmark         &         \checkmark         \\
 Holiday FE          &           -         &           -         &         \checkmark         &         \checkmark         \\
 Interact FE         &           -         &           -         &           -         &         \checkmark         \\
