first round of feedback Patrick

--- a/TeX/paper/soc_ext_paper_main.tex
+++ b/TeX/paper/soc_ext_paper_main.tex
@@ -161,7 +161,7 @@ labelfont={bf}
 %--------------------------------------------------------------------
 %	AUTHOR & TITLE
 %--------------------------------------------------------------------
-\title{Crime Externalities from Football Games in Germany\footnote{I am very grateful to Victoria Endl-Geyer and Helmut Rainer for valuable comments and discussions. Furthermore, I thank conference participants at the ifo Institute. The author gratefully acknowledges financial support from the Leibniz association. Dominik Ammon provided excellent research assistance. All errors and omissions are my own.
+\title{Crime Externalities from Football Games in Germany\footnote{I am very grateful to Victoria Endl-Geyer, Helmut Rainer, and Patrick Reich for valuable comments and discussions. Furthermore, I thank conference participants at the ifo Institute. The author gratefully acknowledges financial support from the Leibniz association. Dominik Ammon provided excellent research assistance. All errors and omissions are my own.
 }}
 \author{
 	Marc Fabel 
@@ -205,7 +205,7 @@ labelfont={bf}
 \renewcommand{\abstractname}{\vspace{-\baselineskip}} % GET RID OF ABSTRACT TITLE
 \begin{abstract}\noindent 
 	\footnotesize{\begin{center}\textbf{Abstract}\end{center} 
-		This paper investigates the impact of professional football games on physical violence in Germany. I employ a generalized difference-in-differences strategy that exploits time-series and cross-sectional variation in crime register data for the period 2011-2015. I compare the level of assaults on days with and without matches while controlling for date heterogeneity, weather, and holidays. I find that a home game leads to an increase of the assault rate by 21.5 percent. The effects are largely driven by male victims, who do not know the perpetrator, and are decreasing with age. In total, professional football games explain almost 18 percent of all assault reports and generate annual social costs of 95 million euros.	\\\newline \textbf{Keywords:} football games, violent crime, assaults. \newline \textbf{JEL codes:} J19, K42, Z13, Z29.}
+		This paper investigates the impact of professional football games on physical violence in Germany. I employ a generalized difference-in-differences strategy that exploits time-series and cross-sectional variation in crime register data for the period 2011-2015. I compare the level of assaults on days with and without matches while controlling for date heterogeneity, weather, and holidays. My results suggest that a home game leads to an increase of the assault rate by 21.5 percent. The effects are largely driven by male victims, who do not know the perpetrator, and are decreasing with age. In total, professional football games explain almost 18 percent of all assault reports and generate annual social costs of 95 million euros.	\\\newline \textbf{Keywords:} football games, violent crime, assaults. \newline \textbf{JEL codes:} J19, K42, Z13, Z29.}
 
 \end{abstract}
 
