restructure literature review (shorten in intro & own section)

--- a/TeX/paper/parts/soc_ext_body.tex
+++ b/TeX/paper/parts/soc_ext_body.tex
@@ -25,9 +25,9 @@ Back-of-the-envelope calculations based on my estimates indicate that the crime 
 
 
 
-% Literature
-This paper complements the literature on sporting events and their effects on different dimensions of crime. Studies in the US American context often use offense reports from the National Incident Based Reporting System to investigate the impact of American (college) football games on crime. \cite{rees2009college} exploit within agency variation to study the effects of Division I-A college American football games on various offense categories for the years 2000-2005.\footnote{Almost all of the following studies exploit within law enforcement agency variation over time while controlling for weather, holidays and other sources of heterogeneity across time.} They find that assaults, vandalism, arrests for disorderly conduct, and alcohol-related offenses increase in hosting municipalities on game days. More sizable effects are associated with upset game outcomes, defined as when lower-ranked teams win over better-ranked teams. The effects of away games are not significantly different from zero. \cite{lindo2018college} examine the effect of college party culture surrounding Division 1 American football games on sexual assaults. They show that the daily reports of rape victimization among 17-24-year-old women increase by 28 percent on games days. The effects are larger for home games, prominent matches, and teams playing in the better ranked subdivision of Division 1. Furthermore, they show that game outcomes matter: upset wins increase rape victimization strongly. \cite{card2011family} analyze the impact of emotionally unsettling events associated with wins and losses of professional American football teams on family violence for the years 1995-2006. They find an increase of intimate partner violence by ten percent in the event of upset losses (when the home team was expected to win). There are no effects for upset wins or when the game expectations are close. The effects of male-on-female intimate partner violence are pronounced around the end of the game and are larger for more prominent games. In the European context, researchers focus on football matches to estimate the effect of large scale sporting events on crime. \cite{marie2016police} investigates the effect of football matches on crime in London using hourly offense data obtained from the Metropolitan Crime Statistics System. His results show that property crimes increase (fall) by 4 percent (3 percent) for every extra 10,000 spectators attending a home (away) game. Violent crimes are only affected by derby matches. \cite{montolio2016time} study the temporal impact of football matches on criminal behavior in Barcelona (2007-2011). They match reports on registered crime with football matches played by the Football Club Barcelona (FCB) to see whether the games displace criminal activities temporally. They exploit a panel approach in which they compare crime for the same time window on the same weekday, with and without FCB games. Their results indicate temporal displacements for criminal activities of thefts, criminal damage, robberies, and gender violence. Moreover, instances of gender violence increase after home defeats. In a follow-up study, \cite{montolio2019measuring} investigate the spatial dimensions of the crime externalities stemming from football games. Their findings show increased levels of thefts (mainly pickpocketing) across the entire city in the event of a home game. The impact is larger for regions in close proximity to the stadium. During away games, by contrast, the number of thefts around the stadium is relatively smaller. The effects of football matches on assaults are analogous to thefts. In fact, they find a displacement effect of violent fans to areas close to the stadium on days with home matches.
-%\footnote{In addition to the papers presented in this section, other noteworthy studies in that strand of research are: \cite{kalist2016national}.}
+
+% literature
+This paper complements the literature on sporting events and their effects on different dimensions of crime. Studies in the US American context demonstrate that American college football games lead to a higher incidence of rape \citep{lindo2018college}, physical assaults, vandalism, disorderly conducts, and alcohol-related offenses \citep{rees2009college}. Furthermore, it has been documented that intimate partner violence is linked with unsettling defeats of professional American football games \citep{card2011family}. In the European setting, studies have shown that professional football games increase property and violent crimes \citep{marie2016police}, and displace offenses temporally \citep{montolio2016time} as well as spatially \citep{montolio2019measuring}.
 
 
 
@@ -40,7 +40,7 @@ The empirical analysis in this paper expands previous literature on many dimensi
 
 
 % roadmap
-The remainder of the paper is structured as follows. The next section provides information about football games and how they are associated with violent spectator behavior. Section \ref{sec_soc_ext:data} explains the data and variables. Section \ref{sec_soc_ext:empirical_strategy} contains a description of the empirical framework. Section \ref{sec_soc_ext:results} reports results, validity checks, a discussion on potential channels, and robustness tests. Section \ref{sec_soc_ext:conclusion} concludes.
+The remainder of the paper is structured as follows. The next section provides information about football games, how they are associated with violent spectator behavior, and previous literature. Section \ref{sec_soc_ext:data} explains the data and variables. Section \ref{sec_soc_ext:empirical_strategy} contains a description of the empirical framework. Section \ref{sec_soc_ext:results} reports results, validity checks, a discussion on potential channels, and robustness tests. Section \ref{sec_soc_ext:conclusion} concludes.
 
 
 
@@ -79,6 +79,12 @@ There are a couple of theories rationalizing spectator violence.\footnote{Theore
 Alcohol plays a crucial role in the context of spectator violence in German football stadiums. \cite{cook2013virtuous} describes the pharmacological effects of drinking alcohol on aggression and cognitive functioning. With drinking comes a loss of inhibition and impairments of judgment. Furthermore, participants of experiments have been found to show more aggressive behavior after drinking. The 2018 edition of the \citeauthor{PCS2018} specifies that more than every fourth assault (26.2 percent) was committed under the influence of alcohol. While some countries banned alcoholic drinks within the premises (e.g. Brazil since 2003), the rules in German stadiums are somewhat ambiguous. The DFB's security guidelines stipulate that the sale of alcoholic beverages is forbidden before and during games in the stadium. Nevertheless, with the approval of the responsible local security organs, the hosting clubs may, on their own authority, deviate from the regulations. Only in the case of high-risk games, the clubs are urged to adhere to the ban.\footnote{For details, please refer to: \href{https://www.sueddeutsche.de/sport/fussball-alkohol-in-stadien-nur-mit-ausdruecklicher-einwilligung-dpa.urn-newsml-dpa-com-20090101-150625-99-01743}{https://www.sueddeutsche.de/sport/fussball-alkohol-in-stadien-nur-mit-ausdruecklicher-einwilligung-dpa.urn-newsml-dpa-com-20090101-150625-99-01743}.} The clubs, however, have a strong incentive to deviate from the ban as more than one-sixth (538 million Euros in the season of 2017/18) of the \textit{Bundesliga} club's revenues comes through earnings on the matchday (e.g. tickets and catering) and the sale of alcoholic drinks contributes to that amount substantially \citep{deloitte2019report}. For this reason, alcohol and the potential side effects are very present in German football arenas.
 % any data on how much is consumed? https://www.news.de/sport/855220143/schalke-hat-die-durstigsten-fans/1/
 % Statista survey: 56  percent of respondents of a panel survey were in favor of banning alcohol from football stadiums, 35 percent defended the right to drink alcohol in football stadiums: https://de.statista.com/statistik/daten/studie/548802/umfrage/verbot-von-alkohol-in-fussballstadien/
+
+
+\subsection{Previous Literature}
+% Literature
+The paper relates to previous literature that investigates the impact of large scale sporting events on various types of criminal behavior. Studies in the US American context often use offense reports from the National Incident Based Reporting System to investigate the impact of American (college) football games on crime. \cite{rees2009college} exploit within agency variation to study the effects of Division I-A college American football games on various offense categories for the years 2000-2005.\footnote{Almost all of the following studies exploit within law enforcement agency variation over time while controlling for weather, holidays and other sources of heterogeneity across time.} They find that assaults, vandalism, arrests for disorderly conduct, and alcohol-related offenses increase in hosting municipalities on game days. More sizable effects are associated with upset game outcomes, defined as when lower-ranked teams win over better-ranked teams. The effects of away games are not significantly different from zero. \cite{lindo2018college} examine the effect of college party culture surrounding Division 1 American football games on sexual assaults. They show that the daily reports of rape victimization among 17-24-year-old women increase by 28 percent on games days. The effects are larger for home games, prominent matches, and teams playing in the better ranked subdivision of Division 1. Furthermore, they show that game outcomes matter: upset wins increase rape victimization strongly. \cite{card2011family} analyze the impact of emotionally unsettling events associated with wins and losses of professional American football teams on family violence for the years 1995-2006. They find an increase of intimate partner violence by ten percent in the event of upset losses (when the home team was expected to win). There are no effects for upset wins or when the game expectations are close. The effects of male-on-female intimate partner violence are pronounced around the end of the game and are larger for more prominent games. In the European context, researchers focus on football matches to estimate the effect of large scale sporting events on crime. \cite{marie2016police} investigates the effect of football matches on crime in London using hourly offense data obtained from the Metropolitan Crime Statistics System. His results show that property crimes increase (fall) by 4 percent (3 percent) for every extra 10,000 spectators attending a home (away) game. Violent crimes are only affected by derby matches. \cite{montolio2016time} study the temporal impact of football matches on criminal behavior in Barcelona (2007-2011). They match reports on registered crime with football matches played by the Football Club Barcelona (FCB) to see whether the games displace criminal activities temporally. They exploit a panel approach in which they compare crime for the same time window on the same weekday, with and without FCB games. Their results indicate temporal displacements for criminal activities of thefts, criminal damage, robberies, and gender violence. Moreover, instances of gender violence increase after home defeats. In a follow-up study, \cite{montolio2019measuring} investigate the spatial dimensions of the crime externalities stemming from football games. Their findings show increased levels of thefts (mainly pickpocketing) across the entire city in the event of a home game. The impact is larger for regions in close proximity to the stadium. During away games, by contrast, the number of thefts around the stadium is relatively smaller. The effects of football matches on assaults are analogous to thefts. In fact, they find a displacement effect of violent fans to areas close to the stadium on days with home matches.
+%\footnote{In addition to the papers presented in this section, other noteworthy studies in that strand of research are: \cite{kalist2016national}.}
 
 
 
