PROOFREADING: ifo-intern

--- a/TeX/paper/parts/soc_ext_body.tex
+++ b/TeX/paper/parts/soc_ext_body.tex
@@ -6,7 +6,7 @@
 
 
 % STRATEGY & DATA
-The aim of this paper is to undertake an in-depth examination of the effects that football games in the framework of the German professional football league system exert on violent behavior. To get at the causal impact of football matches on physical assaults, I employ a generalized difference-in-differences approach that exploits the variation in the timing of the football games. I compare the level of assaults on days with and without home games while controlling for any potential source of heterogeneity across days of the week, month, and year, while also accounting for other possible confounding variation from weather and holidays. In order to use the time-series and cross-sectional variation in the data, I construct a panel at the municipality-day level. I collect and match data from various sources to analyze the effect of 4,461 football games over the period from 2011-2015. First, detailed information on all matches in the first three leagues is obtained via web scraping.\footnote{This includes, but is by far not limited to the time and location of games.} Second, the primary outcome variable, the rate of physical assaults, comes from powerful registry data provided by the Federal Criminal Police Office. It covers all individuals that fall victim to a crime against their legally protected rights in the sample regions. Third, data from weather monitors and a time-series of holidays on the state level are matched to the data to account for possible confounders. Last, population figures from the Federal Statistical Office are merged to construct regression weights and build the outcome variable. 
+The aim of this paper is to undertake an in-depth examination of the effects that football games in the framework of the German professional football league system exert on violent behavior. To get at the causal impact of football matches on physical assaults, I employ a generalized difference-in-differences approach that exploits the variation in the timing of the football games. I compare the level of assaults on days with and without home games while controlling for any potential source of heterogeneity across days of the week, month, and year, while also accounting for other possible confounding variation from weather and holidays. In order to use the time-series and cross-sectional variation in the data, I construct a panel at the municipality-day level. I collect and match data from various sources to analyze the effect of 4,461 football games over the period from 2011-2015. First, detailed information on all matches in the first three leagues is obtained via web scraping.\footnote{This includes, but is by far not limited to the time and location of games. Furthermore, I exploit betting odds that represent pregame expectations.} Second, the primary outcome variable, the rate of physical assaults, comes from powerful registry data provided by the Federal Criminal Police Office. It covers all individuals that fall victim to a crime against their legally protected rights in the sample regions. Third, data from weather monitors and a time-series of holidays on the state level are matched to the data to account for possible confounders. Last, population figures from the Federal Statistical Office are merged to construct regression weights and build the outcome variable. 
 
 
 
@@ -34,6 +34,7 @@ This paper complements the literature on sporting events and their effects on di
 
 % extension literature
 The empirical analysis in this paper expands previous literature on many dimensions. I assemble a unique data set from various sources to characterize in full the impact of football matches on criminal behavior in the top three German professional football divisions. Using the universe of criminal offenses, I am able to show that almost one in five physical assaults can be attributed to professional football games. In addition to the overall effect, I show effect heterogeneity by victim and crime characteristics. When investigating channels, I find no support for the frustration-aggression hypothesis, but evidence for the social learning theory and a selection story in which violent fans self-select into specific matches.
+% emphasize more the importance of football in Germany
 
 
 
@@ -273,8 +274,8 @@ Summing up, there is evidence that the prominence of games is a crucial determin
 
 
 % Machine Learning application: effect heterogeneity in other dimensions
-{\color{red} missing: ML application: do I find evidence for deprived regions?}\newline
-sample split: larger effects rural (2x basline), ue rate no effect 
+%{\color{red} missing: ML application: do I find evidence for deprived regions?}\newline
+%sample split: larger effects rural (2x basline), ue rate no effect 
 
 
 
